# Photo

./: CMakeLists.txt  main.cpp
UI/: ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h
UI/Forms/: mainwindow.ui  ui_mainwindow.h
